Created models and added DB configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+# Origen de datos
 
+spring.datasource.url=jdbc:sqlserver://votosapp-327121:europe-west2:votos-resource;databaseName=Votos
+spring.datasource.username=ElectorLogin
+spring.datasource.password=fW%qg8&g^PV2VnA43
+
+# Configuracion TLS
+
+server.port: 8443
+security.require-ssl=true
+server.ssl.key-store:/etc/letsencrypt/live/www.votos-resource.com/keystore.p12
+server.ssl.key-store-password: h3getsowned.999.
+server.ssl.keyStoreType: PKCS12
+server.ssl.keyAlias: tomcat
