--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,22 @@
 # Origen de datos
 
-spring.datasource.url=jdbc:sqlserver://votosapp-327121:europe-west2:votos-resource;databaseName=Votos
-spring.datasource.username=ElectorLogin
-spring.datasource.password=fW%qg8&g^PV2VnA43
+spring.datasource.url=jdbc:sqlserver://35.242.179.99;databaseName=Votos
+spring.datasource.username=AdminLogin
+spring.datasource.password=G1ZqqpZKLCM#z4y$5NLX
+
+# Debugueo y logging
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=none
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # Configuracion TLS
 
-server.port: 8443
-security.require-ssl=true
-server.ssl.key-store:/etc/letsencrypt/live/www.votos-resource.com/keystore.p12
-server.ssl.key-store-password: h3getsowned.999.
-server.ssl.keyStoreType: PKCS12
-server.ssl.keyAlias: tomcat
+ server.port:8080
+# security.require-ssl=true
+# server.ssl.key-store:/etc/letsencrypt/live/www.votos-resource.com/keystore.p12
+# server.ssl.key-store-password: h3getsowned.999.
+# server.ssl.keyStoreType: PKCS12
+# server.ssl.keyAlias: tomcat
