--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,9 @@
 
 spring.datasource.url=jdbc:sqlserver://172.17.0.1:1433;databaseName=Votos
 spring.datasource.username=AdminLogin
-spring.datasource.password=G1ZqqpZKLCM#z4y$5NLX
+spring.datasource.password=G1ZqqpZKLCM\#z4y$5NLX
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.database=sqlserver
 
 # Debugueo y logging
 
@@ -15,8 +17,18 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # Configuracion TLS
 
 server.port:8080
+server.port.servlet.context-path=/resource-server-jwt
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9000/auth/realms/ALGO-CAMBIAR
 # security.require-ssl=true
 # server.ssl.key-store:/etc/letsencrypt/live/www.votos-resource.com/keystore.p12
 # server.ssl.key-store-password: h3getsowned.999.
 # server.ssl.keyStoreType: PKCS12
 # server.ssl.keyAlias: tomcat
+
+# Metadatos del KeyStore local.
+
+# La ruta del keystore parte de la raíz del proyecto
+app.security.jwt.keystore-location=keys/keystore.jks
+app.security.jwt.keystore-password=masterlink999
+app.security.jwt.key-alias=jwtsigning
+app.security.jwt.private-key-passphrase=masterlink999
