--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,15 @@
 # Origen de datos
 
 spring.datasource.url=jdbc:sqlserver://172.17.0.1:1433;databaseName=Votos
-spring.datasource.username=AdminLogin
-spring.datasource.password=G1ZqqpZKLCM\#z4y$5NLX
+spring.datasource.username=ElectorLogin
+spring.datasource.password=fW%qg8&g^PV2VnA43
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+#spring.datasource-identidades.url = jdbc:sqlserver://172.17.0.1:9000;databaseName=Identidades
+#spring.datasource-identidades.username = ServiceLogin
+#spring.datasource-identidades.password = +2uF\#e9aY4rT-2RC
+#spring.datasource-identidades.driverClassName = com.microsoft.sqlserver.jdbc.SQLServerDriver
+
 spring.jpa.database=sqlserver
 
 # Debugueo y logging
@@ -12,13 +18,12 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=none
 logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.root=DEBUG
 
 # Configuracion TLS
 
-server.port:8080
-server.port.servlet.context-path=/resource-server-jwt
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9000/auth/realms/ALGO-CAMBIAR
+#server.port.servlet.context-path=/resource-server-jwt
+#spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9000/auth/realms/ALGO-CAMBIAR
 # security.require-ssl=true
 # server.ssl.key-store:/etc/letsencrypt/live/www.votos-resource.com/keystore.p12
 # server.ssl.key-store-password: h3getsowned.999.
@@ -28,7 +33,7 @@ spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9000/auth/
 # Metadatos del KeyStore local.
 
 # La ruta del keystore parte de la raíz del proyecto
-app.security.jwt.keystore-location=keys/keystore.jks
+app.security.jwt.keystore-location=keys/keystore_auth_server.jks
 app.security.jwt.keystore-password=masterlink999
-app.security.jwt.key-alias=jwtsigning
+app.security.jwt.key-alias=jwtsigning_auth
 app.security.jwt.private-key-passphrase=masterlink999
